--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "doctrine/dbal": "^3.5",
         "doctrine/orm": "^2.13",
         "symfony/cache": "^6.0",
-        "doctrine/annotations": "^1.13"
+        "doctrine/annotations": "^1.13",
+        "siriusphp/validation": "^3.1"
     },
     "autoload": {
         "psr-4": {
