--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
         "doctrine/dbal": "^3.5",
         "doctrine/orm": "^2.13",
         "symfony/cache": "^6.0",
-        "doctrine/annotations": "^1.13",
-        "siriusphp/validation": "^3.1"
+        "doctrine/annotations": "^1.13"
     },
     "autoload": {
         "psr-4": {
-            "Database\\": "database"
+            "Database\\": "database",
+            "Function\\": "function"
         }
     }
 }
