added eloquent for handling database

--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
         "doctrine/dbal": "^3.5",
         "doctrine/orm": "^2.13",
         "symfony/cache": "^6.0",
-        "doctrine/annotations": "^1.13"
+        "doctrine/annotations": "^1.13",
+        "illuminate/database": "^9.42"
     },
     "autoload": {
         "psr-4": {
             "Database\\": "database",
-            "Function\\": "function"
+            "Function\\": "function",
+            "Model\\": "model"
         }
     }
 }
