--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,14 @@
     "require": {
         "vlucas/phpdotenv": "^5.5",
         "symfony/var-dumper": "^6.0",
-        "doctrine/migrations": "^3.5",
-        "doctrine/dbal": "^3.5",
-        "doctrine/orm": "^2.13",
         "symfony/cache": "^6.0",
-        "doctrine/annotations": "^1.13",
         "illuminate/database": "^9.42"
     },
     "autoload": {
         "psr-4": {
             "Database\\": "database",
             "Function\\": "function",
-            "Model\\": "model"
+            "Model\\": "Model"
         }
     }
 }
